--- a/all/PageRank/Makefile
+++ b/all/PageRank/Makefile
@@ -1,6 +1,6 @@
 all:
 	javac *.java -classpath ./mongo-java-driver-2.12.4.jar;
-	java -cp mongo-java-driver-2.12.4.jar:. Main DJs acordaosAll linksAll
-
+	java -cp mongo-java-driver-2.12.4.jar:. Main DJs linksAll pageRanked1All
+ 
 init:
 	mongod
