take collections and db as arguments for page rank and graph maker

--- a/all/Graph/Makefile
+++ b/all/Graph/Makefile
@@ -1,6 +1,12 @@
 all:
 	javac *.java -classpath ./mongo-java-driver-2.12.4.jar;
-	java -cp mongo-java-driver-2.12.4.jar:. Main DJs acordaosAll linksAll
+	java -cp mongo-java-driver-2.12.4.jar:. Main DJs acordaosAll
+stj:
+	javac *.java -classpath ./mongo-java-driver-2.12.4.jar;
+	java -cp mongo-java-driver-2.12.4.jar:. Main DJs stj
 
+stf:
+	javac *.java -classpath ./mongo-java-driver-2.12.4.jar;
+	java -cp mongo-java-driver-2.12.4.jar:. Main DJs stf
 init:
 	mongod
