--- a/all/PageRank/Makefile
+++ b/all/PageRank/Makefile
@@ -1,6 +1,15 @@
 all:
 	javac *.java -classpath ./mongo-java-driver-2.12.4.jar;
-	java -cp mongo-java-driver-2.12.4.jar:. Main DJs linksAll pageRanked1All
+	java -cp mongo-java-driver-2.12.4.jar:. Main DJs linksAll 
+
+stj:
+	javac *.java -classpath ./mongo-java-driver-2.12.4.jar;
+	java -cp mongo-java-driver-2.12.4.jar:. Main DJs linksSTJ 
+
+stf:
+	javac *.java -classpath ./mongo-java-driver-2.12.4.jar;
+	java -cp mongo-java-driver-2.12.4.jar:. Main DJs linksSTF 
+
  
 init:
 	mongod
