adjust graph maker and page ranker

--- a/all/PageRank/Makefile
+++ b/all/PageRank/Makefile
@@ -1,6 +1,6 @@
 all:
 	javac *.java -classpath ./mongo-java-driver-2.12.4.jar;
-	java -cp mongo-java-driver-2.12.4.jar:. Main DJs linksAll 
+	java -cp mongo-java-driver-2.12.4.jar:. Main DJs linksALL
 
 stj:
 	javac *.java -classpath ./mongo-java-driver-2.12.4.jar;
