--- a/all/Graph/Makefile
+++ b/all/Graph/Makefile
@@ -1,6 +1,6 @@
 all:
 	javac *.java -classpath ./mongo-java-driver-2.12.4.jar;
-	java -cp mongo-java-driver-2.12.4.jar:. Main DJs stfstj 
+	java -cp mongo-java-driver-2.12.4.jar:. Main DJs all
 stj:
 	javac *.java -classpath ./mongo-java-driver-2.12.4.jar;
 	java -cp mongo-java-driver-2.12.4.jar:. Main DJs stj
